--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,22 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        debug {
+            storeFile file("../../maple.keystore")
+            storePassword "shaoshuai"
+            keyAlias "shaoshuai"
+            keyPassword "shaoshuai"
+        }
+        release {
+            storeFile file("../../maple.keystore")
+            storePassword "shaoshuai"
+            keyAlias "shaoshuai"
+            keyPassword "shaoshuai"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
