--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.maple.googlemap"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 3
         versionName "1.0.1"
     }
@@ -31,6 +31,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -38,6 +43,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.0.2"
 //    implementation "androidx.legacy:legacy-support-v4:1.0.0"
 //    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 //    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
