--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,16 +39,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.2"
-//    implementation "androidx.legacy:legacy-support-v4:1.0.0"
-//    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-//    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
-//    implementation 'com.google.android.gms:play-services-places:15.0.1'
     //
-    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 }
