--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
     repositories {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://jitpack.io' }
         google()
         jcenter()
     }
